[project]
name = "news-template"
version = "0.1.0"
description = ""
authors = [
    {name = "skip"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "weasyprint (>=65.1,<66.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
